# stoat-magics

./: CMakeLists.txt  LICENSE  Makefile  README.md
src/: arch.h  bitboard.h  core.h  main.cpp  types.h
src/pext/: data.h  pext.cpp  pext.h  util.h
src/util/: bits.h  blocking_queue.h  multi_array.h  rng.h
